<?xml version="1.0" encoding="utf-8"?><!--  ~ Copyright (c) 2020 Ruslan Potekhin  --><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="wrap_content"    android:layout_height="wrap_content">    <ScrollView        android:layout_alignParentStart="true"        android:layout_marginTop="15dp"        android:layout_alignParentTop="true"        android:layout_alignParentEnd="true"        android:layout_width="wrap_content"        android:layout_height="wrap_content">    <RelativeLayout        android:id="@+id/pref_intolerance_container"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:paddingStart="100dp">        <CheckBox            android:id="@+id/diary"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/dairy" />        <CheckBox            android:id="@+id/egg"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/diary"            android:text="@string/egg" />        <CheckBox            android:id="@+id/gluten"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/egg"            android:text="@string/gluten" />        <CheckBox            android:id="@+id/grain"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/gluten"            android:text="@string/grain" />        <CheckBox            android:id="@+id/peanut"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/grain"            android:text="@string/peanut" />        <CheckBox            android:id="@+id/seafood"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/peanut"            android:text="@string/seafood" />        <CheckBox            android:id="@+id/sesame"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/seafood"            android:text="@string/sesame" />        <CheckBox            android:id="@+id/shellfish"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/sesame"            android:text="@string/shellfish" />        <CheckBox            android:id="@+id/soy"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/shellfish"            android:text="@string/soy" />        <CheckBox            android:id="@+id/sulfite"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/soy"            android:text="@string/sulfite" />        <CheckBox            android:id="@+id/tree_nut"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/sulfite"            android:text="@string/tree_nut" />        <CheckBox            android:id="@+id/wheat"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/tree_nut"            android:text="@string/wheat" />    </RelativeLayout>    </ScrollView></RelativeLayout>