<?xml version="1.0" encoding="utf-8"?><!--  ~ Copyright (c) 2020 Ruslan Potekhin  --><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="wrap_content"    android:layout_height="wrap_content">    <ScrollView        android:layout_alignParentStart="true"        android:layout_marginTop="15dp"        android:layout_alignParentTop="true"        android:layout_alignParentEnd="true"        android:layout_width="wrap_content"        android:layout_height="wrap_content">        <RelativeLayout            android:id="@+id/pref_diet_container"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:paddingStart="100dp">            <CheckBox                android:id="@+id/gluten_free"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/gluten_free" />            <CheckBox                android:id="@+id/ketogenic"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/gluten_free"                android:text="@string/ketogenic" />            <CheckBox                android:id="@+id/vegetarian"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/ketogenic"                android:text="@string/vegetarian" />            <CheckBox                android:id="@+id/lacto_vegetarian"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/vegetarian"                android:text="@string/lacto_vegetarian" />            <CheckBox                android:id="@+id/ovo_vegetarian"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/lacto_vegetarian"                android:text="@string/ovo_vegetarian" />            <CheckBox                android:id="@+id/vegan"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/ovo_vegetarian"                android:text="@string/vegan" />            <CheckBox                android:id="@+id/pescetarian"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/vegan"                android:text="@string/pescetarian" />            <CheckBox                android:id="@+id/paleo"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/pescetarian"                android:text="@string/paleo" />            <CheckBox                android:id="@+id/primal"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/paleo"                android:text="@string/primal" />            <CheckBox                android:id="@+id/whole_30"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_below="@id/primal"                android:text="@string/whole_30" />        </RelativeLayout>    </ScrollView></RelativeLayout>