<?xml version="1.0" encoding="utf-8"?><!--  ~ Copyright (c) 2020 Ruslan Potekhin  --><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent">    <TextView        android:id="@+id/settings_appbar"        style="@style/Title"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:padding="20dp"        android:text="@string/title_settings"        android:textAlignment="viewStart"        android:textSize="18sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <ImageButton        android:id="@+id/about"        android:layout_width="24dp"        android:layout_height="24dp"        android:layout_marginEnd="24dp"        android:background="@drawable/roundcorner"        android:src="@drawable/ic_help"        app:layout_constraintBottom_toBottomOf="@+id/settings_appbar"        app:layout_constraintEnd_toEndOf="@+id/settings_appbar"        app:layout_constraintTop_toTopOf="parent" />    <ImageView        android:id="@+id/profile_icon"        android:layout_width="25dp"        android:layout_height="25dp"        android:layout_marginStart="20dp"        android:layout_marginTop="8dp"        android:contentDescription="@string/profile_icon"        android:src="@drawable/ic_account_circle_black_24dp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/settings_appbar" />    <TextView        style="@style/PreferenceTitle"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="70dp"        android:layout_marginTop="10dp"        android:layout_toEndOf="@id/profile_icon"        android:text="@string/personal_data"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/settings_appbar" />    <TextView        android:id="@+id/calories"        style="@style/PreferenceTextUsual"        android:layout_marginTop="10dp"        android:text="@string/Daily_calories"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/profile_icon" />    <TextView        android:id="@+id/proteins"        style="@style/PreferenceTextUsual"        android:text="@string/Daily_proteins"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/calories" />    <TextView        android:id="@+id/fats"        style="@style/PreferenceTextUsual"        android:text="@string/Daily_fats"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/proteins" />    <TextView        android:id="@+id/carbs"        style="@style/PreferenceTextUsual"        android:text="@string/Daily_carbs"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/fats" />    <TextView        android:id="@+id/useLocal"        style="@style/PreferenceTextUsual"        android:text="@string/database"        app:layout_constraintEnd_toEndOf="parent"        android:visibility="gone"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/carbs" />    <TextView        android:id="@+id/delete"        style="@style/PreferenceTextUsual"        android:paddingStart="0dp"        android:paddingEnd="0dp"        android:text="@string/delete_all"        android:textAlignment="center"        android:textColor="@color/delete_account"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/diet" />    <ImageView        android:id="@+id/recipes_icon"        android:layout_width="25dp"        android:layout_height="25dp"        android:layout_marginStart="20dp"        android:layout_marginTop="20dp"        android:contentDescription="@string/recipe"        android:src="@drawable/ic_bowl"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/useLocal" />    <TextView        style="@style/PreferenceTitle"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="70dp"        android:layout_marginTop="24dp"        android:layout_toEndOf="@id/profile_icon"        android:text="@string/title_recipes"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/useLocal" />    <TextView        android:id="@+id/measure"        style="@style/PreferenceTextUsual"        android:layout_marginTop="10dp"        android:text="@string/measure_system"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/recipes_icon" />    <TextView        android:id="@+id/intolerance"        style="@style/PreferenceTextUsual"        android:text="@string/intolerance"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/measure" />    <TextView        android:id="@+id/diet"        style="@style/PreferenceTextUsual"        android:text="@string/diet"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/intolerance" /></androidx.constraintlayout.widget.ConstraintLayout>