<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.intro.ThirdIntroductionFragment">

        <TextView
            android:id="@+id/intro_all_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:text="@string/intro_last"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:contentDescription="@string/dessert"
            android:id="@+id/intro_third_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/intro_all_set"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/intro_third_continue"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@id/intro_third_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/contin"
            android:textSize="15sp"
            app:cornerRadius="25dp" />

        <TextView
            android:id="@+id/intro_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_third_continue"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/intro_privacy"
            android:textAlignment="center"
            android:textColor="@color/colorText_desc"
            android:textSize="15sp" />

    </RelativeLayout>
</ScrollView>
